<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.All.logbook.LogbookAddActivity">

    <EditText
        android:id="@+id/b_lager_add_textinput"
        android:layout_width="277dp"
        android:layout_height="220dp"
        android:layout_marginTop="200dp"
        android:autofillHints="@string/writeSomething"
        android:background="@drawable/square_edittext"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/writeSomething"
        android:inputType="textMultiLine"
        android:textAllCaps="false"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_lager_add_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/saveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_lager_add_textinput" />

    <TextView
        android:id="@+id/b_lager_add_textview"
        android:layout_width="240dp"
        android:layout_height="59dp"
        android:text="@string/bLagerAddInfo"
        app:layout_constraintBottom_toTopOf="@+id/b_lager_add_textinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_lager_product_chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:background="@drawable/rounded_button"
        android:text="@string/product"
        app:layout_constraintBottom_toTopOf="@+id/b_lager_add_textinput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_lager_add_textview" />

    <Button
        android:id="@+id/b_lager_team_chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/team"
        app:layout_constraintBottom_toTopOf="@+id/b_lager_add_textinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b_lager_product_chooser"
        app:layout_constraintTop_toBottomOf="@+id/b_lager_add_textview" />

    <EditText
        android:id="@+id/b_lager_enter_amount"
        android:layout_width="83dp"
        android:layout_height="53dp"
        android:autofillHints="@string/amount"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/b_lager_add_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/amount"
        app:layout_constraintBottom_toTopOf="@+id/b_lager_enter_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>